--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ JWT_EXPIRE=24h
 # Environment
 NODE_ENV=production
 PORT=3000
+
+
+
+abdullahamjadlhr2020
+J7oH8Wn1zmPoC4VD
+
+mongodb+srv://abdullahamjadlhr2020:J7oH8Wn1zmPoC4VD@todolistcluster.5zatdeo.mongodb.net/?retryWrites=true&w=majority&appName=todolistcluster
