--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ PORT=3000
 
 
 
-abdullahamjadlhr2020
-J7oH8Wn1zmPoC4VD
+# abdullahamjadlhr2020
+# J7oH8Wn1zmPoC4VD
 
-mongodb+srv://abdullahamjadlhr2020:J7oH8Wn1zmPoC4VD@todolistcluster.5zatdeo.mongodb.net/?retryWrites=true&w=majority&appName=todolistcluster
+# mongodb+srv://abdullahamjadlhr2020:J7oH8Wn1zmPoC4VD@todolistcluster.5zatdeo.mongodb.net/?retryWrites=true&w=majority&appName=todolistcluster
