--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-MONGODB_URI=mongodb+srv://your-username:your-password@your-cluster.mongodb.net/your-database
+MONGODB_URI=
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-here
